# poetest

./: .tool-versions  README.md  pyproject.toml
.github/workflows/: CI.yml
src/poetest/: main.py
tests/: test_main.py
